HandleShowMoreButton small fixes

--- a/index.css
+++ b/index.css
@@ -3501,16 +3501,27 @@ input[type="range"]:active::-webkit-slider-thumb{
     line-height: calc(20 / 15);
   }
   .expert-card__tabpanel {
-    max-height: 304px;
+    max-height: 300px;
     overflow: hidden;
     transition: max-height .5s ease-in-out;
+    position: relative;
   }
   .tabpanel_full {
     max-height: 1000px;
     overflow: auto;
   }
-  .expert-card__tabpanel-content {
+.expert-card__tabpanel-content::after {
 
+
+}
+.expert-card__tabs:not(:has(.tabpanel_full)) .expert-card__tabpanel-content::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 20%;
+  background: linear-gradient(transparent 0%, #F5F5F5 100%);
 }
   .expert-card__more-button {
     display: inline-block;
